# embedded-serial-mcp

./: .gitignore  Cargo.toml  LICENSE  README_ZH.md  package.json
.github/workflows/: build.yml  release.yml
examples/STM32_demo/: Cargo.toml  Embed.toml  README.md
examples/STM32_demo/.cargo/: config.toml
examples/STM32_demo/docs/: serial-mcp-testing-documentation.md
examples/STM32_demo/src/: main.rs
scripts/: build-packages.js  cross-prepare.sh  set-version.js
src/: config.rs  error.rs  lib.rs  main.rs  utils.rs
src/serial/: connection.rs  error.rs  mod.rs  port.rs  tests.rs
src/session/: core.rs  manager.rs  mod.rs
src/tools/: mod.rs  serial_handler.rs  tests.rs  types.rs
tests/common/: mock_serial.rs  mod.rs
