[package]
name = "embedded-serial-mcp"
version = "0.0.5"
edition = "2021"
authors = ["vividcodeAI <vividcode@gmail.com>", "vividcodeAI"]
description = "A comprehensive embedded serial MCP server for serial port communication"
license = "MIT"
readme = "README.md"
repository = "https://github.com/vividcode-ai/embedded-serial-mcp"
keywords = ["mcp", "serial", "communication", "embedded", "protocol", "embedded-serial"]
categories = ["development-tools", "embedded"]

[dependencies]
# MCP SDK
rmcp = { version = "0.3.2", features = ["server", "macros", "transport-io"] }

# Core serial communication
serialport = "4.5"
tokio = { version = "1.41", features = ["full"] }
tokio-serial = "5.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1.0", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Command line and configuration
clap = { version = "4.5", features = ["derive", "env"] }
toml = "0.8"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
base64 = "0.22"

# Async utilities
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
mockall = "0.13"
tempfile = "3.14"
tokio-test = "0.4"

[features]
default = []

[[bin]]
name = "embedded-serial-mcp"
path = "src/main.rs"

[lib]
name = "embedded_serial_mcp"
path = "src/lib.rs"
